// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders results, previous and next 1`] = `
<pagination-container__ContainerWithResults>
  <div>
    <results__MessageContainer>
      <div>
        <div>
          Showing 13 - 15 of 20 results
        </div>
      </div>
    </results__MessageContainer>
    <pagination-border__BorderWithResults>
      <div>
        <responsive__LinkContainer>
          <div>
            <link__RespLink
              href="?mock-4"
              responsiveLinkStyles={null}
              target={null}
              underlined={true}
            >
              <a
                href="?mock-4"
                target={null}
              >
                <div>
                  <svg
                    height={12}
                    viewBox="42 12 60 120"
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path
                        d="8cd5ea7b91eea38d77fd9ad20f3573cb"
                      />
                    </g>
                  </svg>
                  <div>
                    <span>
                      Previous
                      <page-label__ResponsiveLabel>
                        <span>
                           page
                        </span>
                      </page-label__ResponsiveLabel>
                    </span>
                  </div>
                </div>
              </a>
            </link__RespLink>
          </div>
        </responsive__LinkContainer>
        <responsive__LinkContainer>
          <div>
            <link__RespLink
              href="?mock-6"
              responsiveLinkStyles={null}
              target={null}
              underlined={true}
            >
              <a
                href="?mock-6"
                target={null}
              >
                <div>
                  <div>
                    <span>
                      Next
                      <page-label__ResponsiveLabel>
                        <span>
                           page
                        </span>
                      </page-label__ResponsiveLabel>
                    </span>
                  </div>
                  <svg
                    aria-label="icon-next-page"
                    height={12}
                    viewBox="42 12 60 120"
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path
                        d="9a11f164df72df4cb9ea6a3266824472"
                      />
                    </g>
                  </svg>
                </div>
              </a>
            </link__RespLink>
          </div>
        </responsive__LinkContainer>
      </div>
    </pagination-border__BorderWithResults>
  </div>
</pagination-container__ContainerWithResults>
`;

exports[`2. renders with no results 1`] = `
<pagination-container__ContainerWithoutResults>
  <div>
    <pagination-border__BorderWithoutResults>
      <div>
        <responsive__LinkContainer>
          <div>
            <link__RespLink
              href="?mock-4"
              responsiveLinkStyles={null}
              target={null}
              underlined={true}
            >
              <a
                href="?mock-4"
                target={null}
              >
                <div>
                  <svg
                    height={12}
                    viewBox="42 12 60 120"
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path
                        d="8cd5ea7b91eea38d77fd9ad20f3573cb"
                      />
                    </g>
                  </svg>
                  <div>
                    <span>
                      Previous
                      <page-label__ResponsiveLabel>
                        <span>
                           page
                        </span>
                      </page-label__ResponsiveLabel>
                    </span>
                  </div>
                </div>
              </a>
            </link__RespLink>
          </div>
        </responsive__LinkContainer>
        <responsive__LinkContainer>
          <div>
            <link__RespLink
              href="?mock-6"
              responsiveLinkStyles={null}
              target={null}
              underlined={true}
            >
              <a
                href="?mock-6"
                target={null}
              >
                <div>
                  <div>
                    <span>
                      Next
                      <page-label__ResponsiveLabel>
                        <span>
                           page
                        </span>
                      </page-label__ResponsiveLabel>
                    </span>
                  </div>
                  <svg
                    aria-label="icon-next-page"
                    height={12}
                    viewBox="42 12 60 120"
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path
                        d="9a11f164df72df4cb9ea6a3266824472"
                      />
                    </g>
                  </svg>
                </div>
              </a>
            </link__RespLink>
          </div>
        </responsive__LinkContainer>
      </div>
    </pagination-border__BorderWithoutResults>
  </div>
</pagination-container__ContainerWithoutResults>
`;

exports[`3. does not give a count smaller than a single page 1`] = `
<pagination-container__ContainerWithResults>
  <div>
    <results__MessageContainer>
      <div>
        <div>
          Showing 1 - 20 of 20 results
        </div>
      </div>
    </results__MessageContainer>
    <pagination-border__BorderWithResults>
      <div>
        <responsive__LinkContainer>
          <div />
        </responsive__LinkContainer>
        <responsive__LinkContainer>
          <div />
        </responsive__LinkContainer>
      </div>
    </pagination-border__BorderWithResults>
  </div>
</pagination-container__ContainerWithResults>
`;

exports[`4. limits the starting result to the total count 1`] = `
<pagination-container__ContainerWithResults>
  <div>
    <results__MessageContainer>
      <div>
        <div>
          Showing 20 - 20 of 20 results
        </div>
      </div>
    </results__MessageContainer>
    <pagination-border__BorderWithResults>
      <div>
        <responsive__LinkContainer>
          <div>
            <link__RespLink
              href="?mock-3"
              responsiveLinkStyles={null}
              target={null}
              underlined={true}
            >
              <a
                href="?mock-3"
                target={null}
              >
                <div>
                  <svg
                    height={12}
                    viewBox="42 12 60 120"
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path
                        d="8cd5ea7b91eea38d77fd9ad20f3573cb"
                      />
                    </g>
                  </svg>
                  <div>
                    <span>
                      Previous
                      <page-label__ResponsiveLabel>
                        <span>
                           page
                        </span>
                      </page-label__ResponsiveLabel>
                    </span>
                  </div>
                </div>
              </a>
            </link__RespLink>
          </div>
        </responsive__LinkContainer>
        <responsive__LinkContainer>
          <div />
        </responsive__LinkContainer>
      </div>
    </pagination-border__BorderWithResults>
  </div>
</pagination-container__ContainerWithResults>
`;

exports[`5. renders previous and not next 1`] = `
<pagination-container__ContainerWithoutResults>
  <div>
    <pagination-border__BorderWithoutResults>
      <div>
        <responsive__LinkContainer>
          <div>
            <link__RespLink
              href="?mock-4"
              responsiveLinkStyles={null}
              target={null}
              underlined={true}
            >
              <a
                href="?mock-4"
                target={null}
              >
                <div>
                  <svg
                    height={12}
                    viewBox="42 12 60 120"
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path
                        d="8cd5ea7b91eea38d77fd9ad20f3573cb"
                      />
                    </g>
                  </svg>
                  <div>
                    <span>
                      Previous
                      <page-label__ResponsiveLabel>
                        <span>
                           page
                        </span>
                      </page-label__ResponsiveLabel>
                    </span>
                  </div>
                </div>
              </a>
            </link__RespLink>
          </div>
        </responsive__LinkContainer>
        <responsive__LinkContainer>
          <div />
        </responsive__LinkContainer>
      </div>
    </pagination-border__BorderWithoutResults>
  </div>
</pagination-container__ContainerWithoutResults>
`;

exports[`6. renders next and not previous 1`] = `
<pagination-container__ContainerWithoutResults>
  <div>
    <pagination-border__BorderWithoutResults>
      <div>
        <responsive__LinkContainer>
          <div />
        </responsive__LinkContainer>
        <responsive__LinkContainer>
          <div>
            <link__RespLink
              href="?mock-2"
              responsiveLinkStyles={null}
              target={null}
              underlined={true}
            >
              <a
                href="?mock-2"
                target={null}
              >
                <div>
                  <div>
                    <span>
                      Next
                      <page-label__ResponsiveLabel>
                        <span>
                           page
                        </span>
                      </page-label__ResponsiveLabel>
                    </span>
                  </div>
                  <svg
                    aria-label="icon-next-page"
                    height={12}
                    viewBox="42 12 60 120"
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path
                        d="9a11f164df72df4cb9ea6a3266824472"
                      />
                    </g>
                  </svg>
                </div>
              </a>
            </link__RespLink>
          </div>
        </responsive__LinkContainer>
      </div>
    </pagination-border__BorderWithoutResults>
  </div>
</pagination-container__ContainerWithoutResults>
`;
